[package]
name = "imgrab"
version = "0.8.11"
authors = ["Keep Calm <keepcalmandbyo@gmail.com>"]
edition = "2021"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.2.8", features = ["derive"] }
directories = "4.0.1"
fmtsize = "0.1.1"
nipper = "0.1.9"
pathdiff = "0.2.1"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking", "cookies", "json"] }
scraper = "0.13.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
sha1_smol = "1.0.0"
url = "2.2.2"
urlencoding = "2.1.0"
